--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,8 @@
     <script src="js/Exam2.js"></script>
 </head>
 
+<meta name="viewport" content="width=device-width,initial-scale=1">
+
 <body>
     <div id="top">
         <h1>Exam 2 Problem</h1>
@@ -17,12 +19,12 @@
             <option>Category List</option>
             <option>Add a Product Category</option>
             <option>Change a Category Description</option>
-            <option>Delete a Category</option>
+            <option>Delete a Product Category</option>
             <option>About</option>
         </select>
         </div>
         <hr>
-        <br>
+  
     </div>
     <section id="catlist">
         <br>
@@ -30,7 +32,9 @@
         <button onclick="GenCategories()" id="gencats">Generate Categories List</button>
         <br>
         <br>
-        <label id="catoutput"></label>
+        <div id="cattable"></div>
+        <br>
+        <br>
     </section>
     <section id="addcat">
         <u>New Category</u>
@@ -47,17 +51,40 @@
         <button onclick="AddCategory()" id="changedisc">Add New Category</button>
         <br>
         <br>
-        <label id="catnewoutput"></label>
+        <label id="addcatoutput"></label>
     </section>
     <section id="changedesc">
-        <label>Enter an Customer ID:</label>
-        <input type="text" id="delid">
+        <u>Change Category Description</u>
         <br>
         <br>
-        <button onclick="DeleteCustomer()" id="delbutton">Delete Customer</button>
+        <label>Existing Category ID:</label>
+        <input type="number" id="catid">
         <br>
         <br>
-        <label id="deloutput"> </label>
+        <label>New Category Description:</label>
+        <input type="text" id="catchangedesc">
+        <br>
+        <br>
+        <button onclick="ChangeDescription()" id="moddesc">Change Category  Description</button>
+        <br>
+        <br>
+        <label id="changedescoutput"></label>
+    </section>
+    <section id="deletecat">
+        <u>Delete a Category</u>
+        <br>
+        <br>
+        <label>Existing Category ID:</label>
+        <input type="text" id="catdelid">
+        <br>
+        <br>
+        <button onclick="DeleteCategory()" id="delcat">Delete Category</button>
+        <br>
+        <br>
+        <label id="deletecatoutput"></label>
+    </section>
+    <section id="about">
+        
     </section>
 </body>
 </html>
