--- a/index.html
+++ b/index.html
@@ -84,7 +84,19 @@
         <label id="deletecatoutput"></label>
     </section>
     <section id="about">
-        
+       <br>
+        <u>Created By:</u>
+        <br>
+        <br>
+        <b>Michael Hubbell</b>
+        <br>
+        <br>
+        FOR:
+        <br>
+        <br>
+        <b>Dr. Rivera's SP2015 IS 491-VT Mobile Development Class<br>
+        <br>
+        <br>
     </section>
 </body>
 </html>
